feat: Implementar arquitectura segura con API Routes y Firebase Admin SDK
- Crear API Routes protegidas con Firebase Admin SDK (server-side)
- Implementar cliente API centralizado (api-client.ts)
- Agregar validacion Zod con sanitizacion XSS en todos los schemas
- Implementar sistema de auditoria (audit-logger.ts)
- Agregar rate limiting con middleware de Next.js
- Configurar headers de seguridad (CSP, HSTS, X-Frame-Options, etc.)
- Crear proceso de revision de seguridad automatizado
- Actualizar .gitignore para proteger credenciales
- Migrar paginas del dashboard para usar API Routes
- Sincronizar reglas de Firestore con coleccion audit_logs

Seguridad:
- Sin credenciales hardcodeadas en el codigo
- Service Account Key protegido en .gitignore
- Sanitizacion de entrada contra XSS
- Rate limiting para prevenir abuso de API
- Headers de seguridad configurados

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,7 +1,15 @@
+# ============================================
 # Variables de entorno para WINFIN Tesorería
+# ============================================
 # Copia este archivo a .env.local y rellena los valores
+# ⚠️ NUNCA commitees .env.local al repositorio
 
-# Firebase Configuration
+# ============================================
+# Firebase Client Configuration (Públicas)
+# ============================================
+# Estas variables son visibles en el cliente (NEXT_PUBLIC_)
+# La seguridad se maneja con Firestore Rules, no con estas keys
+
 NEXT_PUBLIC_FIREBASE_API_KEY=tu_api_key_aqui
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=tu_proyecto.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=tu_proyecto_id
@@ -11,3 +19,20 @@ NEXT_PUBLIC_FIREBASE_APP_ID=tu_app_id
 
 # Opcional: Analytics
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# ============================================
+# Firebase Admin SDK (SECRETO - Solo Servidor)
+# ============================================
+# Opción 1: Variable de entorno con JSON completo (recomendado para producción)
+# FIREBASE_SERVICE_ACCOUNT_KEY={"type":"service_account","project_id":"...","private_key":"..."}
+
+# Opción 2: Archivo local (solo desarrollo)
+# Coloca serviceAccountKey.json en la raíz del proyecto
+# El archivo se cargará automáticamente si existe
+
+# ============================================
+# Configuración de la Aplicación
+# ============================================
+# NODE_ENV=development
+# NEXT_PUBLIC_APP_URL=http://localhost:3000
+
