--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "security:audit": "powershell -ExecutionPolicy Bypass -File ./scripts/security-audit.ps1",
+    "security:check": "npm run typecheck && npm audit"
   },
   "dependencies": {
     "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
     "firebase": "^10.7.1",
+    "firebase-admin": "^13.6.0",
     "lucide-react": "^0.303.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
